Bug 1692845 - Restore read from global print settings for a few settings, including print_bgcolor and print_bgimages. r=bobowen, a=RyanVM

These were lost in bug 1667953, but I don't think print_bgimages /
print_bgcolor should be printer-specific only.

Differential Revision: https://phabricator.services.mozilla.com/D105465