widget/cocoa/nsPrintSettingsServiceX.mm
@@ -63,12 +63,7 @@ nsresult nsPrintSettingsServiceX::_CreatePrintSettings(nsIPrintSettings** _retva
     return rv;
   }
 
-  auto globalPrintSettings =
-      nsIPrintSettings::kInitSaveShrinkToFit | nsIPrintSettings::kInitSaveHeaderLeft |
-      nsIPrintSettings::kInitSaveHeaderCenter | nsIPrintSettings::kInitSaveHeaderRight |
-      nsIPrintSettings::kInitSaveFooterLeft | nsIPrintSettings::kInitSaveFooterCenter |
-      nsIPrintSettings::kInitSaveFooterRight | nsIPrintSettings::kInitSaveEdges |
-      nsIPrintSettings::kInitSaveReversed | nsIPrintSettings::kInitSaveInColor;
+  auto globalPrintSettings = nsIPrintSettings::kGlobalSettings;
 
   // XXX Why is Mac special? Why are we copying global print settings here?
   // nsPrintSettingsService::InitPrintSettingsFromPrefs already gets the few
